--- a/src/main/resources/templates/screen.html
+++ b/src/main/resources/templates/screen.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th = "http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>screen</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>hello screen</h1>
+<h1>hello <span th:text="${myData}"></span> screen</h1>
 
 </body>
 </html>
