--- a/src/main/resources/templates/member/member-detail.html
+++ b/src/main/resources/templates/member/member-detail.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>상세보기</title>
+    <style>
+        #update-form{
+            display: none;
+        }
+    </style>
+
 </head>
 <body>
 <div th:replace = "/member/header :: headerFragment"></div>
@@ -10,5 +16,33 @@
 <p>이메일 : <span th:text="${member.email}"></span></p>
 <p>패스워드 : <span th:text="${member.password}"></span></p>
 <p>가입일시 : <span th:text="${member.create_time}"></span></p>
+<button onclick="showUpdateForm()">수정</button><a th:href="@{/member/delete(id=${member.id})}"><button>삭제</button></a>
+
+<div id="update-form">
+    <form action="/members/update" method="post">
+        <p>
+            <label for="id"> ID </label>
+            <input id="id" name="id" type="text" th:value="${member.id}" readonly>
+        </p>
+        <p>
+            <label for="name"> 이름 </label>
+            <input id="name" name="name" type="text" th:value="${member.name}">
+        </p>
+        <p>
+            <label for="email"> 이메일 </label>
+            <input id="email" name="email" type="text" th:value="${member.email}" readonly>
+        </p>
+        <p>
+            <label for="password"> 비밀번호 </label>
+            <input id="password" name="password" type="password" th:value="${member.password}">
+        </p>
+        <button type="submit">수정완료</button>
+    </form>
+</div>
+<script>
+    function showUpdateForm() {
+        document.getElementById('update-form').style.display = 'block';
+    }
+</script>
 </body>
 </html>
