--- a/src/main/resources/templates/member/member-detail.html
+++ b/src/main/resources/templates/member/member-detail.html
@@ -19,7 +19,7 @@
 <button onclick="showUpdateForm()">수정</button><a th:href="@{/member/delete(id=${member.id})}"><button>삭제</button></a>
 
 <div id="update-form">
-    <form action="/members/update" method="post">
+    <form action="http://localhost:8080/members/update" method="post">
         <p>
             <label for="id"> ID </label>
             <input id="id" name="id" type="text" th:value="${member.id}" readonly>
